spike calc func

--- a/Cell_Types_Project_Master.ipynb
+++ b/Cell_Types_Project_Master.ipynb
@@ -1934,132 +1934,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#Import the \"Cell Types Cache\" from the AllenSDK core package\n",
-    "from allensdk.core.cell_types_cache import CellTypesCache\n",
+    "def calc_spike_width(specimen_id):\n",
+    "    ''' calculates the spike width using specimen id to get the data. returns 0.0 if file does not exist'''\n",
+    "    try:\n",
+    "        data_set = ctc.get_ephys_data(specimen_id)\n",
+    "        sweep_number = rheobases_df.loc[specimen_id]['rheobase_sweep_number']\n",
+    "        sweep_data = data_set.get_sweep(sweep_number)\n",
     "\n",
-    "#Import CellTypesApi, which will allow us to query the database.\n",
-    "from allensdk.api.queries.cell_types_api import CellTypesApi\n",
+    "        index_range = sweep_data[\"index_range\"]\n",
+    "        i = sweep_data[\"stimulus\"][0:index_range[1]+1] # in A\n",
+    "        v = sweep_data[\"response\"][0:index_range[1]+1] # in V\n",
+    "        i *= 1e12 # to pA\n",
+    "        v *= 1e3 # to mV\n",
     "\n",
-    "# initialize cache as 'ctc' (cell types cache)\n",
-    "ctc = CellTypesCache(manifest_file='cell_types/manifest.json')\n",
+    "        sampling_rate = sweep_data[\"sampling_rate\"] # in Hz\n",
+    "        t = np.arange(0, len(v)) * (1.0 / sampling_rate)\n",
     "\n",
-    "# import tool used to get AP spike data for specimen\n",
-    "from allensdk.ephys.ephys_extractor import EphysSweepFeatureExtractor\n",
+    "        sweep_ext = EphysSweepFeatureExtractor(t=t, v=v, i=i, start=1.02, end=2.02)\n",
+    "        sweep_ext.process_spikes()\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# get rid of all the ugly red warnings\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "The paper used mouse data, so filter to get only mouse specimen.\n",
-    "\n",
-    "mouse_cells_df = pd.DataFrame(ctc.get_cells(species = ['mus musculus']))\n",
-    "mouse_ids_df = mouse_cells_df[['id','dendrite_type']].set_index('id')\n",
-    "mouse_ids_df\n",
-    "\n",
-    "Get ephys features.\n",
-    "\n",
-    "ephys_features_df = pd.DataFrame(ctc.get_ephys_features())\n",
-    "ephys_ids_df = ephys_features_df[['specimen_id','rheobase_sweep_number']].set_index('specimen_id')\n",
-    "ephys_ids_df.shape\n",
-    "\n",
-    "Use inner join to get specimen ids of only mouse species that have ephys data.\n",
-    "\n",
-    "Assuming 'id' in mouse cells df the same as 'specimen id' in ephys data, we can get the rheobase sweep number for each mouse specimen.\n",
-    "\n",
-    "me_rheobase_df = mouse_ids_df.join(ephys_ids_df).reset_index()\n",
-    "me_rheobase_df = me_rheobase_df.rename(columns={\"id\": \"specimen_id\"})\n",
-    "\n",
-    "# this df has mouse ephys rheobase data\n",
-    "me_rheobase_df\n",
-    "\n",
-    "Get the morphology dataset.\n",
-    "\n",
-    "morph_feats_df = pd.DataFrame(ctc.get_morphology_features())\n",
-    "morph_feats_df.shape\n",
-    "\n",
-    "Now we use the morphology dataset to select for specimen that are mice, have ephys data, and have morphology data by performing an inner merge of the two datasets.\n",
-    "\n",
-    "ephys_morph_mice_df = me_rheobase_df.merge(morph_feats_df,on='specimen_id', how= 'inner')\n",
-    "\n",
-    "# this contains the ids of the mice with ephys and morph data\n",
-    "df_ids = ephys_morph_mice_df[['specimen_id']]\n",
-    "# make ephys df of only the mice with morphology and ephys data\n",
-    "ephys_df = ephys_features_df.merge(df_ids, on='specimen_id', how='inner')\n",
-    "# make morphology df of only the mice with morphology and ephys data\n",
-    "morph_df = morph_feats_df.merge(df_ids, on='specimen_id', how='inner')\n",
-    "\n",
-    "morph_df ## TODO HOW DOES THIS HAVE MORE ROWS THAN DF_IDS??? IT SHOULDNT\n",
-    "\n",
-    "Classify each specimen as inhibitory or excitatory by accessing their dendrite type in the `.get_cells()` method.\n",
-    "\n",
-    "def classify(specimen_id):\n",
-    "    '''classifies a specimen as inhibitory or excitatory based on if its spiny or aspiny'''\n",
-    "    a_or_s = mouse_ids_df.loc[specimen_id]['dendrite_type']\n",
+    "        return round(1e3 * np.nanmean(sweep_ext.spike_feature(\"width\")),4)\n",
     "    \n",
-    "    if a_or_s == 'spiny':\n",
-    "        return 'excitatory'\n",
-    "    else:\n",
-    "        return 'inhibitory'\n",
-    "\n",
-    "Add inhib or excitatory columns to ephys and morphology data.\n",
-    "\n",
-    "ephys_df['inhib/excit'] = ephys_df['specimen_id'].apply(classify)\n",
-    "ephys_df\n",
-    "\n",
-    "morph_df['inhib/excit'] = morph_df['specimen_id'].apply(classify)\n",
-    "morph_df = morph_df.set_index('specimen_id')\n",
-    "morph_df\n",
-    "\n",
-    "# also drop columns that arent quantitative, aside from the inhib/excit columns\n",
-    "morph_df = morph_df.drop(columns=['superseded','tags','neuron_reconstruction_type'])\n",
-    "\n",
-    "# check for null values\n",
-    "morph_df.isnull().sum()\n",
-    "\n",
-    "morph_df has nan for all of its values in 'hausdorff_dimension' and 'average_bifurcation_angle_remote', so get rid of those columns\n",
-    "\n",
-    "# dont include columns in morph_df unrelated to morphology (ie. id numbers)\n",
-    "morph_columns = list(morph_df.columns)\n",
-    "morph_columns.remove('id')\n",
-    "morph_columns.remove('average_bifurcation_angle_remote')\n",
-    "morph_columns.remove('hausdorff_dimension')\n",
-    "morph_columns.remove('inhib/excit')\n",
-    "morph_columns\n",
-    "\n",
-    "\n",
-    "inhib_morph_df = morph_df[morph_df['inhib/excit'] == 'inhibitory'].drop(columns = ['inhib/excit'])\n",
-    "excit_morph_df = morph_df[morph_df['inhib/excit'] == 'excitatory'].drop(columns = ['inhib/excit'])\n",
-    "print(\"inhib df shape:\" + str(inhib_morph_df.shape))\n",
-    "print(\"excit df shape:\" + str(excit_morph_df.shape))\n",
-    "\n",
-    "Note that the number of rows differ by 30.\n",
-    "\n",
-    "Plot zscores\n",
-    "\n",
-    "from scipy import stats\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Set up the figure\n",
-    "fig,ax = plt.subplots(figsize=(20,5))\n",
-    "\n",
-    "differences = []\n",
-    "\n",
-    "for i in morph_columns:\n",
-    "    inhib_mean = np.mean(inhib_morph_df[i])\n",
-    "    excit_mean = np.mean(excit_morph_df[i])\n",
-    "    differences.append(excit_mean - inhib_mean)\n",
-    "\n",
-    "diff_zscore = stats.zscore(differences)\n",
-    "ax.bar(morph_columns, diff_zscore)\n",
-    "plt.xticks(rotation=90)\n",
-    "\n",
-    "plt.show()"
+    "    except OSError as e:\n",
+    "        return 0.0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
