--- a/Cell_Types_Project_Master.ipynb
+++ b/Cell_Types_Project_Master.ipynb
@@ -1015,7 +1015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`morph_df` has nan for all of its values in 'hausdorff_dimension' and 'average_bifurcation_angle_remote', so get rid of those columns."
+    "`morph_df` has nan for all of its values in 'hausdorff_dimension' and 'average_bifurcation_angle_remote', so get rid of those columns. Also get rid of non numeric columns (like inhib/excit) and columns unrelated to morphology (id)."
    ]
   },
   {
@@ -1274,16 +1274,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating the AP half width for the whole dataframe at this point takes an excessively long time due to the method since some of the iterations requires their own download. For this reason, we take a sample of the first 15 specimen and calculate their spike widths (AP half widths)."
+    "Calculating the AP half width for the whole dataframe at this point takes an excessively long time due to the method since some of the iterations require their own download. For this reason, we take a sample of the first 30 specimen and calculate their spike widths (AP half widths)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ephys40 = ephys_df.head(30)"
+    "ephys40 = ephys_df.head(30)\n",
+    "# 30 samples takes ~5 minutes to run in the next cell"
    ]
   },
   {
@@ -2318,7 +2319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since our helper method returned '-100' every time the file required to calculate spike width was not found, we drop the rows with -100."
+    "Since our helper method `calc_spike_width` returned '-100' every time the file retured a 'File Not Found' Error, we drop the rows with -100."
    ]
   },
   {
